// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordsBriefCard tests should load the details component 1`] = `
<Segment
  className="brief-card"
  raised={true}
>
  <Header
    as="h3"
    textAlign="right"
  >
    Test
  </Header>
  <p>
     
    <span
      data-test={3}
    >
      3
    </span>
     
    test test test
  </p>
  <Grid>
    <GridRow>
      <GridColumn
        width={8}
      />
      <GridColumn
        width={8}
      />
    </GridRow>
  </Grid>
</Segment>
`;

exports[`RecordsBriefCard tests should render with buttons 1`] = `
<RecordsBriefCard
  buttonLeft={
    <Button
      as="button"
      fluid={true}
      icon={true}
      positive={true}
    >
      <Icon
        as="i"
        name="plus"
      />
      New
    </Button>
  }
  buttonRight={
    <Button
      as="button"
      fluid={true}
      icon={true}
      positive={true}
    >
      <Icon
        as="i"
        name="plus"
      />
      New
    </Button>
  }
  stats={3}
  text="test test test"
  title="Test"
>
  <Segment
    className="brief-card"
    raised={true}
  >
    <div
      className="ui raised segment brief-card"
    >
      <Header
        as="h3"
        textAlign="right"
      >
        <h3
          className="ui right aligned header"
        >
          Test
        </h3>
      </Header>
      <p>
         
        <span
          data-test={3}
        >
          3
        </span>
         
        test test test
      </p>
      <Grid>
        <div
          className="ui grid"
        >
          <GridRow>
            <div
              className="row"
            >
              <GridColumn
                width={8}
              >
                <div
                  className="eight wide column"
                >
                  <Button
                    as="button"
                    fluid={true}
                    icon={true}
                    positive={true}
                  >
                    <button
                      className="ui fluid icon positive button"
                      onClick={[Function]}
                    >
                      <Icon
                        as="i"
                        name="plus"
                      >
                        <i
                          aria-hidden="true"
                          className="plus icon"
                        />
                      </Icon>
                      New
                    </button>
                  </Button>
                </div>
              </GridColumn>
              <GridColumn
                width={8}
              >
                <div
                  className="eight wide column"
                >
                  <Button
                    as="button"
                    fluid={true}
                    icon={true}
                    positive={true}
                  >
                    <button
                      className="ui fluid icon positive button"
                      onClick={[Function]}
                    >
                      <Icon
                        as="i"
                        name="plus"
                      >
                        <i
                          aria-hidden="true"
                          className="plus icon"
                        />
                      </Icon>
                      New
                    </button>
                  </Button>
                </div>
              </GridColumn>
            </div>
          </GridRow>
        </div>
      </Grid>
    </div>
  </Segment>
</RecordsBriefCard>
`;

exports[`RecordsBriefCard tests should render without buttons 1`] = `
<RecordsBriefCard
  stats={3}
  text="test test test"
  title="Test"
>
  <Segment
    className="brief-card"
    raised={true}
  >
    <div
      className="ui raised segment brief-card"
    >
      <Header
        as="h3"
        textAlign="right"
      >
        <h3
          className="ui right aligned header"
        >
          Test
        </h3>
      </Header>
      <p>
         
        <span
          data-test={3}
        >
          3
        </span>
         
        test test test
      </p>
      <Grid>
        <div
          className="ui grid"
        >
          <GridRow>
            <div
              className="row"
            >
              <GridColumn
                width={8}
              >
                <div
                  className="eight wide column"
                />
              </GridColumn>
              <GridColumn
                width={8}
              >
                <div
                  className="eight wide column"
                />
              </GridColumn>
            </div>
          </GridRow>
        </div>
      </Grid>
    </div>
  </Segment>
</RecordsBriefCard>
`;
